--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -2,8 +2,88 @@ body {
     background: url(https://www.toptal.com/designers/subtlepatterns/patterns/xv.png) repeat;
 }
 
+* {
+    font-family: 'Comfortaa', cursive;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0px 6px 6px 6px gray;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    -webkit-box-shadow: inset 0 0 6px blue;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Comfortaa:400,700&subset=vietnamese');
 .center {
     text-align: center;
+}
+
+.container-card {
+    padding: 0px 12em 0px 12em;
+    cursor: pointer;
+}
+
+.box-card {
+    margin: 5px;
+    word-wrap: break-word;
+    word-break: keep-all;
+    /*    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);*/
+}
+
+.no-mobile {
+    display: block;
+    float: right;
+}
+
+.comfortaa {
+    font-family: 'Comfortaa', cursive;
+}
+
+.showlist {
+    margin: 0 auto;
+    padding: 2em 20em 5em 20em;
+    border-radius: 15px;
+}
+
+
+/*Medium Screen*/
+
+@media only screen and (max-width: 1280px) and (min-width: 480px) {
+    .showlist {
+        margin: 0 auto;
+        padding: 2em 10em 5em 10em;
+        border-radius: 15px;
+    }
+}
+
+.container {
+    padding-top: 5em;
+    padding-bottom: 5em;
+}
+
+
+/*On Mobile*/
+
+@media only screen and (max-width: 800px) and (min-width: 320px) {
+    .showlist {
+        padding: 3em 0.2em 2em 0.2em;
+    }
+    .no-mobile {
+        display: none;
+    }
+    .container-card {
+        padding: 0px .2em 0px .2em;
+    }
 }
 
 @charset "UTF-8";
@@ -48,12 +128,25 @@ body {
     background-color: orange;
 }
 
+.el-message-box {
+    text-align: left;
+    display: inline-block;
+    vertical-align: middle;
+    background-color: #fff;
+    width: 320px;
+    border-radius: 5px;
+    font-size: 16px;
+    overflow: hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden
+}
+
 .el-loading-mask.is-fullscreen {
     position: fixed
 }
 
 .el-loading-mask.is-fullscreen .el-loading-spinner {
-    margin-top: -175px
+    margin-top: -205px
 }
 
 .el-loading-mask.is-fullscreen .el-loading-spinner .circular {
@@ -61,32 +154,44 @@ body {
     height: 199px
 }
 
-.el-loading-spinner {
-    top: 50%;
-    margin-top: -175px;
-    width: 100%;
-    text-align: center;
-    position: absolute
-}
-
 .el-loading-spinner .el-loading-text {
+    font-family: 'Comfortaa', cursive;
     color: white;
     margin: 3px 0;
     padding: 55px;
     font-size: 40px
 }
 
+@media only screen and (max-width: 480px) and (min-width: 320px) {
+    .el-loading-mask.is-fullscreen .el-loading-spinner {
+        margin-top: -200px
+    }
+    .el-loading-mask.is-fullscreen .el-loading-spinner .circular {
+        width: 159px;
+        height: 159px
+    }
+    .el-loading-spinner .el-loading-text {
+        font-family: 'Comfortaa', cursive;
+        color: white;
+        margin: 3px 0;
+        padding: 55px;
+        font-size: 30px
+    }
+}
+
 .el-loading-spinner .circular {
     width: 88px;
     height: 88px;
-    animation: loading-rotate 2s linear infinite
+    animation: loading-rotate 2s linear infinite;
+    -webkit-animation: loading-rotate 2s linear infinite;
 }
 
 .el-loading-spinner .path {
     animation: loading-dash 1.5s ease-in-out infinite;
-    stroke-dasharray: 90, 150;
+    -webkit-animation: loading-dash 1.5s ease-in-out infinite;
+    stroke-dasharray: 5, 10;
     stroke-dashoffset: 0;
-    stroke-width: 5;
+    stroke-width: 2;
     stroke: white;
     stroke-linecap: round
 }
@@ -98,7 +203,7 @@ body {
 
 @keyframes loading-rotate {
     100% {
-        transform: rotate(720deg)
+        transform: rotate(360deg);
     }
 }
 
@@ -108,11 +213,32 @@ body {
         stroke-dashoffset: 0
     }
     50% {
-        stroke-dasharray: 90, 150;
+        stroke-dasharray: 5, 10;
         stroke-dashoffset: -40px
     }
     100% {
-        stroke-dasharray: 90, 150;
-        stroke-dashoffset: -120px
+        stroke-dasharray: 5, 10;
+        stroke-dashoffset: -120px;
+    }
+}
+
+@-webkit-keyframes loading-rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes loading-dash {
+    0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0
+    }
+    50% {
+        stroke-dasharray: 5, 10;
+        stroke-dashoffset: -40px
+    }
+    100% {
+        stroke-dasharray: 5, 10;
+        stroke-dashoffset: -120px;
     }
 }
