--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -1,43 +1,45 @@
-body {
-    background: url(https://www.toptal.com/designers/subtlepatterns/patterns/xv.png) repeat;
-}
-
-* {
-    font-family: 'Comfortaa', cursive;
-}
-
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    -webkit-box-shadow: inset 0px 6px 6px 6px gray;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    -webkit-box-shadow: inset 0 0 6px blue;
-}
-
 @import url('https://fonts.googleapis.com/css?family=Comfortaa:400,700&subset=vietnamese');
 .center {
     text-align: center;
 }
 
+body {
+    background: url(https://www.toptal.com/designers/subtlepatterns/patterns/xv.png) repeat;
+}
+
+* {
+    font-family: 'Comfortaa', Arial, Noto Sans;
+}
+
 .container-card {
-    padding: 0px 12em 0px 12em;
+    padding: 0px 1em 0px 1em;
     cursor: pointer;
+    width: 100%;
+}
+
+.img-zoom {
+    transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+}
+
+.img-zoom:hover {
+    transform: scale(2.75, 2.75);
+    -webkit-transform: scale(2.75, 2.75);
+    border: groove;
+    -webkit-border: solid;
 }
 
 .box-card {
     margin: 5px;
     word-wrap: break-word;
     word-break: keep-all;
+    transition: all .3s ease-in-out;
     /*    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);*/
+}
+
+.box-card:hover {
+    transform: scale(1.1, 1.1);
+    box-shadow: 0 0px 15px rgba(0, 0, 0, 0.2);
 }
 
 .no-mobile {
@@ -45,8 +47,12 @@ body {
     float: right;
 }
 
+.on-mobile {
+    display: none;
+}
+
 .comfortaa {
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Comfortaa', Arial, Noto Sans;
 }
 
 .showlist {
@@ -64,17 +70,21 @@ body {
         padding: 2em 10em 5em 10em;
         border-radius: 15px;
     }
-}
-
-.container {
-    padding-top: 5em;
-    padding-bottom: 5em;
+    .container-card {
+        padding: 0px 0.5em 0px 0.5em;
+        width: 100%;
+        cursor: pointer;
+    }
 }
 
 
 /*On Mobile*/
 
 @media only screen and (max-width: 800px) and (min-width: 320px) {
+    .box-card:hover {
+        transform: scale(1, 1);
+        box-shadow: 0 0px 15px rgba(0, 0, 0, 0.2);
+    }
     .showlist {
         padding: 3em 0.2em 2em 0.2em;
     }
@@ -84,16 +94,31 @@ body {
     .container-card {
         padding: 0px .2em 0px .2em;
     }
+    .on-mobile {
+        display: block;
+    }
+    .el-message-box {
+        text-align: left;
+        display: inline-block;
+        vertical-align: middle;
+        background-color: #fff;
+        width: 320px;
+        border-radius: 5px;
+        font-size: 16px;
+        overflow: hidden;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden
+    }
+}
+
+.underline {
+    text-decoration: underline;
 }
 
 @charset "UTF-8";
 .el-loading-mask {
     background-color: plum;
-    transition: opacity .3s
-}
-
-.white {
-    color: white;
+    transition: opacity .3s;
 }
 
 .bg-purple {
@@ -104,42 +129,8 @@ body {
     background-color: indigo;
 }
 
-.bg-teal {
-    background-color: teal;
-}
 
-.bg-salmon {
-    background-color: salmon;
-}
-
-.bg-lightgreen {
-    background-color: lightgreen;
-}
-
-.bg-green {
-    background-color: #2ecc71;
-}
-
-.bg-red-pink {
-    background-color: #D81B60;
-}
-
-.bg-orange {
-    background-color: orange;
-}
-
-.el-message-box {
-    text-align: left;
-    display: inline-block;
-    vertical-align: middle;
-    background-color: #fff;
-    width: 320px;
-    border-radius: 5px;
-    font-size: 16px;
-    overflow: hidden;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden
-}
+/*Element ui overwrite  */
 
 .el-loading-mask.is-fullscreen {
     position: fixed
@@ -155,28 +146,11 @@ body {
 }
 
 .el-loading-spinner .el-loading-text {
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Comfortaa', Arial, Noto Sans;
     color: white;
     margin: 3px 0;
     padding: 55px;
     font-size: 40px
-}
-
-@media only screen and (max-width: 480px) and (min-width: 320px) {
-    .el-loading-mask.is-fullscreen .el-loading-spinner {
-        margin-top: -200px
-    }
-    .el-loading-mask.is-fullscreen .el-loading-spinner .circular {
-        width: 159px;
-        height: 159px
-    }
-    .el-loading-spinner .el-loading-text {
-        font-family: 'Comfortaa', cursive;
-        color: white;
-        margin: 3px 0;
-        padding: 55px;
-        font-size: 30px
-    }
 }
 
 .el-loading-spinner .circular {
@@ -199,6 +173,26 @@ body {
 .el-loading-fade-enter,
 .el-loading-fade-leave-active {
     opacity: 0
+}
+
+
+/*On mobile */
+
+@media only screen and (max-width: 480px) and (min-width: 320px) {
+    .el-loading-mask.is-fullscreen .el-loading-spinner {
+        margin-top: -200px
+    }
+    .el-loading-mask.is-fullscreen .el-loading-spinner .circular {
+        width: 159px;
+        height: 159px
+    }
+    .el-loading-spinner .el-loading-text {
+        font-family: 'Comfortaa', Arial, Noto Sans;
+        color: white;
+        margin: 0px 0;
+        padding: 15px;
+        font-size: 25px
+    }
 }
 
 @keyframes loading-rotate {
@@ -241,4 +235,58 @@ body {
         stroke-dasharray: 5, 10;
         stroke-dashoffset: -120px;
     }
+}
+
+
+/*Scroll-bar*/
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0px 6px 6px 6px gray;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    -webkit-box-shadow: inset 0 0 6px indigo;
+}
+
+
+/*Color */
+
+.white {
+    color: white;
+}
+
+.indigo {
+    color: indigo !important;
+}
+
+.bg-teal {
+    background-color: teal;
+}
+
+.bg-salmon {
+    background-color: salmon;
+}
+
+.bg-lightgreen {
+    background-color: lightgreen;
+}
+
+.bg-green {
+    background-color: #2ecc71;
+}
+
+.bg-red-pink {
+    background-color: #D81B60;
+}
+
+.bg-orange {
+    background-color: orange;
 }
