--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -32,17 +32,18 @@ body {
     margin: 5px;
     word-wrap: break-word;
     word-break: keep-all;
-    transition: all .3s ease-in-out;
+    /*  transition: all .3s ease-in-out;*/
     /*    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);*/
 }
 
 .box-card:hover {
-    transform: scale(1.1, 1.1);
-    box-shadow: 0 0px 15px rgba(0, 0, 0, 0.2);
+    /*transform: scale(1.05, 1.05);*/
+    box-shadow: 0 0px 30px rgba(0, 0, 0, 0.3);
 }
 
-.no-mobile {
-    display: block;
+.no-mobile {}
+
+.float-right {
     float: right;
 }
 
@@ -55,8 +56,7 @@ body {
 }
 
 .showlist {
-    margin: 0 auto;
-    padding: 2em 20em 5em 20em;
+    padding: 2em 3em 5em 3em;
     border-radius: 15px;
 }
 
@@ -200,7 +200,8 @@ body {
     }
 }
 
-@keyframes loading-dash {
+
+/*@keyframes loading-dash {
     0% {
         stroke-dasharray: 1, 200;
         stroke-dashoffset: 0
@@ -214,6 +215,7 @@ body {
         stroke-dashoffset: -120px;
     }
 }
+*/
 
 @-webkit-keyframes loading-rotate {
     100% {
@@ -284,6 +286,10 @@ body {
 
 .bg-red-pink {
     background-color: #D81B60;
+}
+
+.bg-purple {
+    background-color: purple;
 }
 
 .bg-orange {
