--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -29,16 +29,17 @@ body {
 }
 
 .box-card {
-    margin: 5px;
+    margin: 10px;
     word-wrap: break-word;
     word-break: keep-all;
-    /*  transition: all .3s ease-in-out;*/
+    transition: all .3s ease-in-out;
     /*    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);*/
 }
 
 .box-card:hover {
-    /*transform: scale(1.05, 1.05);*/
-    box-shadow: 0 0px 30px rgba(0, 0, 0, 0.3);
+    transform: scale(1.02, 1.02);
+    box-shadow: 0 0px 20px rgba(52, 73, 94, 1);
+    border-radius: 10px;
 }
 
 .no-mobile {}
