--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -6,9 +6,10 @@ body {
     text-align: center;
 }
 
-* {
+
+/** {
     font-family: 'Comfortaa', Arial, Noto Sans;
-}
+}*/
 
 .container-card {
     padding: 0px 1em 0px 1em;
@@ -33,10 +34,12 @@ body {
     word-wrap: break-word;
     word-break: keep-all;
     transition: all .3s ease-in-out;
-    /*    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);*/
+    border-radius: 5px;
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .box-card:hover {
+    cursor: pointer;
     transform: scale(1.02, 1.02);
     box-shadow: 0 0px 20px rgba(52, 73, 94, 1);
     border-radius: 10px;
