--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -29,6 +29,18 @@ body {
     -webkit-border: solid;
 }
 
+.bg:hover {
+    transform: scale(1.02, 1.02);
+    box-shadow: 0 0px 30px rgba(52, 73, 94, 1);
+}
+
+.bg {
+    cursor: unset;
+    transition: all .3s ease-in-out;
+    background-color: #fff;
+    background: url(https://www.toptal.com/designers/subtlepatterns/patterns/greyzz.png) repeat;
+}
+
 .box-card {
     margin: 10px;
     word-wrap: break-word;
@@ -84,6 +96,10 @@ body {
 /*On Mobile*/
 
 @media only screen and (max-width: 800px) and (min-width: 320px) {
+    .bg:hover {
+        transform: scale(1, 1);
+        box-shadow: 0 0px 0px rgba(52, 73, 94, 1);
+    }
     .box-card:hover {
         transform: scale(1, 1);
         box-shadow: 0 0px 15px rgba(0, 0, 0, 0.2);
@@ -118,7 +134,6 @@ body {
     text-decoration: underline;
 }
 
-@charset "UTF-8";
 .el-loading-mask {
     background-color: plum;
     transition: opacity .3s;
